infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-lab-api
  namespace: chaos-lab
spec:
  type: ClusterIP
  selector:
    app: chaos-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
