infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-lab-api
  namespace: chaos-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chaos-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chaos-lab-api
                port:
                  number: 3000
